added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,21 @@ before_install:
 
 script:
     - docker run -e CI=true mengsss/docker-react npm run test 
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-2-704026385729"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    
+    acess_key_id: $AWS_ACESS_KEY
+    secret_acess_key:
+        secure: "$AWS_SECRET_KEY"
+
+
+
+
