--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ deploy:
         branch: master
     
     acess_key_id: $AWS_ACESS_KEY
-    secret_acess_key:
-        secure: "$AWS_SECRET_KEY"
+    secret_acess_key: $AWS_SECRET_KEY
 
 
 
